Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117490

QNetworkInformation:loadBackendByFeatures(QNetworkInformation::Feature::Reachability) doesn't work in snap

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.4, 6.7.0 FF
    • 6.2, 6.5, 6.6
    • Network
    • None
    • fe653b70a (dev), 9e6de9e8e (tqtc/lts-6.5)

    Description

      I see the following errors in terminal:

      propsReply "An AppArmor policy prevents this sender from sending this message to this recipient; type=\"method_call\", sender=\":1.67\" (uid=1000 pid=1296 comm=\"/snap/telegram-desktop/5072/usr/bin/telegram-deskt\" label=\"snap.telegram-desktop.telegram-desktop (enforce)\") interface=\"org.freedesktop.DBus.Properties\" member=\"GetAll\" error name=\"(unset)\" requested_reply=\"0\" destination=\"org.freedesktop.NetworkManager\" (uid=0 pid=444 comm=\"/usr/sbin/NetworkManager --no-daemon \" label=\"unconfined\")"
      qt.dbus.integration: Could not connect "org.freedesktop.NetworkManager" to "stateChanged"
      qt.dbus.integration: Could not connect "org.freedesktop.NetworkManager" to "connectivityChanged"
      qt.dbus.integration: Could not connect "org.freedesktop.NetworkManager" to "deviceTypeChanged"
      qt.dbus.integration: Could not connect "org.freedesktop.NetworkManager" to "meteredChanged"
      

      Apparently the networkmanager backend's isValid() returns true in snap even though it doesn't really work as QNetworkInformation::loadBackendByName("glib") works just fine.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              manordheim MÃ¥rten Nordheim
              ilya-fedin Ilya Fedin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes